# Physarum-Automata

./: .gitignore
DocumentoArt1/: main.tex
DocumentoArt1/app/: Algoritmo.tex  Introduccion.tex  Physarum.tex
DocumentoPhysarum/: main.tex
DocumentoPhysarum/app/: EstadoDelArte.tex  MarcoTeorico.tex
DocumentoPhysarum/app/estado_del_arte/: PhysarumArte.tex  Robots.tex
DocumentoPhysarum/app/estado_del_arte/physarum/: MMarin.tex  MOlvera.tex
DocumentoPhysarum/app/estado_del_arte/robots/: insectsMonitoreo.tex  vantsMonitoreo.tex
DocumentoPhysarum/app/intro/: Objetivo.tex
DocumentoPhysarum/app/marco_teorico/: Cubelets.tex  ModoGrafico.tex  PhysarumPolycephalum.tex  RasberyPy.tex
DocumentoPhysarum/app/marco_teorico/subtemaCubelets/: ComoFuncionan.tex  QueSon.tex  TiposYCaract.tex
DocumentoPhysarum/app/marco_teorico/subtemasAutomatas/: AutomatasCel2D.tex  AutomatasCelDefFormal.tex  EjemploCel2D.tex  Entriopia.tex  SistemasDinamicos.tex
DocumentoPhysarum/app/marco_teorico/subtemasModoGrafico/: SFML.tex
DocumentoPhysarum/app/marco_teorico/subtemasPhysarum/: Mixomiceto.tex  PComputacional.tex  Physarum.tex  cicloDeVida.tex
DocumentoPhysarum/app/marco_teorico/subtemasRasp/: Comparativa.tex  EleccionYPorque.tex  Introduccion.tex
DocumentoPhysarum/bibliography/: Referencias.bib  Referencias.tex
DocumentoPhysarum/util/: Portada.tex  SeccionI.tex
HardwareTests/KinnectAndLiDAR/: CMakeLists.txt  functions.h  lidar_tutorial.cpp  lidar_udp.cpp  main.cpp  socket.cpp  tests.cpp  utils.cpp  utils.h
HardwareTests/RobotCode/: CMakeLists.txt  RobotTestCode.cpp  RobotTestCodeRutes.cpp  RobotTestServerCode.cpp  tests.cpp
HardwareTests/Servers/CommandServers/: httpser.js  indexs.html  sucket.js
HardwareTests/Servers/LidarServers/: index.html  package-lock.json  server.js  websocket-client.js  websocket.js
HardwareTests/Servers/ServerDiscontinued/: LidarClientUDP.java  LidarRelayServerUDP.java  LidarServerUDP.java  LidarSwingClientUDP.java  LidarTCPServer.java
HardwareTests/Tests/LiDAR/: CMakeLists.txt
HardwareTests/Tests/LiDAR/src/: ILidar.h  RealLidar.h  main.cpp
HardwareTests/Tests/LiDAR/tests/: LidarTest.cpp  MockLidar.h
HardwareTests/Tests/Motors/: CMakeLists.txt
HardwareTests/Tests/Motors/mock/: mock_pigpio.h
HardwareTests/Tests/Motors/src/: mock_pigpio.cpp  motor_control.cpp  motor_control.h
HardwareTests/Tests/Motors/tests/: MotorTest.cpp  motor_test.cpp
HardwareTests/Tests/Real/: CMakeLists.txt  LiDAR_Kinect.cpp
PhyTest/Physarum-Test/: .gitignore  App.h  App.hpp  AppGL.hpp  Astar.hpp  DensityData.hpp  InfoButton.hpp  LoadMap.hpp  Matrix.cpp  Matrix.hpp  PerfectRouteAutomata.hpp  Physarum-Test.vcxproj  Physarum-Test.vcxproj.filters  Physarum.hpp  PhysarumNewmannVer.hpp  RandomRange.hpp  files_management.hpp  main.cpp
PhyTest/Physarum-Test/MAPS/: nilou.jfif
PhyTest/Physarum-Test/SAVE_DATA/: 11_4_2024__15;42;50.txt  11_4_2024__15;47;28.txt  15_4_2024__14;10;6.txt  15_4_2024__14;11;14.txt  15_4_2024__14;3;51.txt  15_5_2024__17;45;42.txt  15_5_2024__17;48;39.txt  15_5_2024__20;53;3.txt  15_5_2024__21;35;2.txt  15_5_2024__23;45;10.txt  16.txt  19_5_2024__1;40;11.txt  19_5_2024__1;57;6.txt  19_5_2024__2;28;38.txt  19_5_2024__3;1;1.txt  19_5_2024__3;8;24.txt  21.txt  29.txt  2_6_2024__13;56;53.txt  2_6_2024__13;58;58.txt  37.txt  57.txt  58.txt  hola.txt_density.txt
PhyTest/Physarum-Test/x64/Debug/: Physarum-Test.exe.recipe  Physarum-Test.ilk  Physarum-Test.vcxproj.FileListAbsolute.txt  vc143.idb
Physarum-GUI/: App.h  App.hpp  Canvas.hpp  LoadMap.hpp  Physarum-GUI.sln  Physarum-GUI.vcxproj  Physarum-GUI.vcxproj.filters  Physarum.hpp  imgui.ini  main.cpp
Physarum-GUI/Physarum-GUI/x64/Debug/: Physarum-GUI.exe.recipe  vc143.idb
PhysarumArticle1/: Makefile  reference.bib
PhysarumDocument/: main.glsdefs  main.tex
PhysarumDocument/app/: Conclusiones.tex  DisenoSistema.tex  Implementacion.tex  Introduccion.tex  MarcoTeorico.tex  Pruebas.tex
PhysarumDocument/app/desarrollo/: RobotRaspberryPi.tex  SimuladorPhysarumPolycephalum.tex
PhysarumDocument/app/desarrollo/robot/: Ajustes01.tex  Ajustes02.tex  Ajustes03.tex  Ajustes04.tex  Ajustes05.tex  DesarrolloInicialHardware.tex
PhysarumDocument/app/desarrollo/simulador/: AjustesBasadosPrubUnit01.tex  AjustesBasadosPrubUnit02.tex  AjustesRutasAceptacion01.tex  CodifAlgRobot01.tex  DisenoInicialInterfaz.tex  GeneradorDeRutas.tex  PrimeraIteracionCod.tex
PhysarumDocument/app/diseno_sistema/: Diagramas.tex  Requerimientos.tex
PhysarumDocument/app/diseno_sistema/subtemasRequerimientos/: RequerimientosFuncionales.tex  RequerimientosNoFuncionales.tex
PhysarumDocument/app/estado_del_arte/: PhysarumArte.tex  Robots.tex
PhysarumDocument/app/estado_del_arte/physarum/: MAdamatzky.tex  MGunji.tex  MJones.tex  MOlvera.tex
PhysarumDocument/app/estado_del_arte/robots/: enviromentalMonitoreo.tex  vantsMonitoreo.tex
PhysarumDocument/app/intro/: Justificacion.tex  Objetivo.tex
PhysarumDocument/app/marco_teorico/: AutomatasCelulares.tex  Cubelets.tex  ModoGrafico.tex  PhysarumPolycephalum.tex  ProtocolosComunicacion.tex  RasberyPy.tex
PhysarumDocument/app/marco_teorico/subtemasAutomatas/: AutomatasCel1D.tex  AutomatasCel2D.tex  AutomatasCelDefFormal.tex  EjemploCel2D.tex  Entriopia.tex  SistemasDinamicos.tex  TeoriaAutomatas.tex  Vecindades.tex
PhysarumDocument/app/marco_teorico/subtemasModoGrafico/: SFML.tex
PhysarumDocument/app/marco_teorico/subtemasPhysarum/: Mixomiceto.tex  PComputacional.tex  Physarum.tex  cicloDeVida.tex
PhysarumDocument/app/marco_teorico/subtemasProtocolos/: HiperText.tex  ProtocolosSeguros.tex  WebSocket.tex
PhysarumDocument/app/marco_teorico/subtemasRasp/: Comparativa.tex  (+2 more)
PhysarumDocument/bibliography/: Referencias.bib  Referencias.tex
PhysarumDocument/util/: Advertencia.tex  Portada.tex  PortadaSup.tex  SeccionI.tex  SeccionII.tex
Unconventional-Comp-Physarum/: Physarum-Test.sln  Physarum-Test.vcxproj  Physarum-Test.vcxproj.filters  Physarum.hpp  main.cpp
Unconventional-Comp-Physarum/x64/Debug/: Physarum-Test.vcxproj.FileListAbsolute.txt  vc143.idb
(+83 files in other folders)
